fix header shifting on sticky

--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,11 @@ html {
 }
 
 .sticky {
-  width: 100vw;
+  width: calc(100vw - 17px);
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
+  right: 17px;
   background-color: #f7f6f2;
   box-shadow: 0 0.25rem 0.688rem hsla(0, 0%, 86%, 0.5);
   transition: background-color 0.2s;
@@ -480,5 +480,11 @@ media-player[data-started].pip:hover .pip-overlay {
 @media (max-width: 767px) {
   .highlighted::after {
     bottom: 5px;
+  }
+}
+
+@media (pointer: coarse) {
+  .sticky {
+    width: 100vw;
   }
 }
